--- a/search.html
+++ b/search.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./src/css/main-style.css">
+    <link rel="icon" type="image/svg" href="./src/img/logo.svg">
+    <script src="https://kit.fontawesome.com/e4c4b9b250.js" crossorigin="anonymous"></script>
+    <title>Nyanta-Sama</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header-container flex">
+            <div class="header-container-left flex">
+                <div class="logo-header flex">
+                    <img src="./src/img/logo-header1.png" class="logo-img" alt="logo-header">
+                </div>
+                <nav class="navbar-header flex">
+                    <ul class="flex">
+                        <li><a href="./index.html" class="home-header"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="#" class="navbar-items">Styles</a></li>
+                        <li><a href="#" class="navbar-items">Purchase List</a></li>
+                        <li><a href="./search.html" class="navbar-items">Post and Ad</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header-container-right flex">
+                <a href="#"><i class="fas fa-comment"></i></a>
+                <a href="#">SING UP</a>
+                <a href="#"><i class="fas fa-user-circle User"></i></a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
