Working on the slider

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                 <div class="hot-ads-info flex">
                     <div class="hot-img">
                         <img src="./src/img/kimetsu.jpg" alt="hot-img">
+                        <div class="img-arrow flex">
+                                <a href="#"><i class="fas fa-angle-left"></i></a>
+                                <a href="#"><i class="fas fa-angle-right"></i></a>
+                        </div>
                     </div>
                     <div class="hot-description">
                         <h3>Demon Slayer / Kimetsu no Yaiba Tomioka Giyuu Kimono Cosplay Costume</h3>
@@ -80,34 +84,98 @@
                 </div>
             </div>
         </section>
-        <section class="anime-costumes">
+        <section class="styles-section">
             <div class="flex">
                 <h2>Anime Costumes</h2>
                 <p>(Complete body costumes without wigs)</p>
             </div>
-            <div class="flex">
-                <div>
+            <div class="carrousel flex">
+                <div class="carrousel-arrow">
                     <i class="fas fa-angle-left"></i>
                 </div>
-                <div>
-                    <div>
-                        <div>
+                <div class="carrousel-container flex">
+                    <div class="item-carrousel">
+                        <div class="img-carrousel">
                             <img src="./src/img/anime-2.jpg" alt="anime2">
                         </div>
-                        <div>
-                            <h4>cosplay</h4>
+                        <div class="carrousel-description">
+                            <h4>My Hero Academia Cosplay Costume</h4>
                             <p>Free Shipping</p>
-                            <p>From: Peru</p>
+                            <span>From: Peru</span>
                         </div>
-                        <div>
-                            <div>
+                        <div class="buttons-carrousel flex">
+                            <div class="plus">
                                 <i class="fas fa-plus"></i>
                             </div>
-                            <p>precio $</p>
+                            <p class="precio-b">45.84 $</p>
+                        </div>
+                    </div>
+                    <div class="item-carrousel">
+                        <div class="img-carrousel">
+                            <img src="./src/img/anime-2.jpg" alt="anime2">
+                        </div>
+                        <div class="carrousel-description">
+                            <h4>My Hero Academia Cosplay Costume</h4>
+                            <p>Free Shipping</p>
+                            <span>From: Peru</span>
+                        </div>
+                        <div class="buttons-carrousel flex">
+                            <div class="plus">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                            <p class="precio-b">45.84 $</p>
+                        </div>
+                    </div>
+                    <div class="item-carrousel">
+                        <div class="img-carrousel">
+                            <img src="./src/img/anime-2.jpg" alt="anime2">
+                        </div>
+                        <div class="carrousel-description">
+                            <h4>My Hero Academia Cosplay Costume</h4>
+                            <p>Free Shipping</p>
+                            <span>From: Peru</span>
+                        </div>
+                        <div class="buttons-carrousel flex">
+                            <div class="plus">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                            <p class="precio-b">45.84 $</p>
+                        </div>
+                    </div>
+                    <div class="item-carrousel">
+                        <div class="img-carrousel">
+                            <img src="./src/img/anime-2.jpg" alt="anime2">
+                        </div>
+                        <div class="carrousel-description">
+                            <h4>My Hero Academia Cosplay Costume</h4>
+                            <p>Free Shipping</p>
+                            <span>From: Peru</span>
+                        </div>
+                        <div class="buttons-carrousel flex">
+                            <div class="plus">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                            <p class="precio-b">45.84 $</p>
+                        </div>
+                    </div>
+                    <div class="item-carrousel">
+                        <div class="img-carrousel">
+                            <img src="./src/img/anime-2.jpg" alt="anime2">
+                        </div>
+                        <div class="carrousel-description">
+                            <h4>My Hero Academia Cosplay Costume</h4>
+                            <p>Free Shipping</p>
+                            <span>From: Peru</span>
+                        </div>
+                        <div class="buttons-carrousel flex">
+                            <div class="plus">
+                                <i class="fas fa-plus"></i>
+                            </div>
+                            <p class="precio-b">45.84 $</p>
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="carrousel-arrow">
                     <i class="fas fa-angle-right"></i>
                 </div>
             </div>
