Creating breakpoints and finish search page responsive

--- a/search.html
+++ b/search.html
@@ -18,8 +18,8 @@
                 <nav class="navbar-headers flex">
                     <ul class="flex">
                         <li><a href="./index.html" class="home-headers"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="#" class="navbar-items">Styles</a></li>
-                        <li><a href="#" class="navbar-items">Purchase List</a></li>
+                        <li><a href="#" class="navbar-items"><i class="fas fa-border-all"></i>Styles</a></li>
+                        <li><a href="#" class="navbar-items"><i class="fas fa-cart-arrow-down"></i>Purchase List</a></li>
                         <li><a href="./search.html" class="search-headers">Post and Ad</a></li>
                     </ul>
                 </nav>
@@ -131,7 +131,7 @@
                             <i class="fas fa-plus"></i>
                         </div>
                         <div class="results-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsa maxime delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, voluptas quisquam dicta labore? Consectetur excepturi atque illo asperiores delectus sed, ipsa facere. Quisquam nihil porro harum eligendi repudiandae dolor excepturi, fuga sed maxime animi sunt aliquid.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fu delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, labore?.</p>
                         </div>
                         <div class="results-details flex">
                             <p>By: <a href="#" class="results-details-a">Jorge Clone</a></p>
@@ -143,7 +143,7 @@
                             </div>
                             <div class="buttons-right">
                                 <a href="#" class="buttons-a">56.99$</a>
-                                <a href="#" class="buttons-a"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
+                                <a href="#" class="buttons-a hidden-button"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                             <i class="fas fa-plus"></i>
                         </div>
                         <div class="results-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsa maxime delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, voluptas quisquam dicta labore? Consectetur excepturi atque illo asperiores delectus sed, ipsa facere. Quisquam nihil porro harum eligendi repudiandae dolor excepturi, fuga sed maxime animi sunt aliquid.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fu delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, labore?.</p>
                         </div>
                         <div class="results-details flex">
                             <p>By: <a href="#" class="results-details-a">Jorge Clone</a></p>
@@ -175,7 +175,7 @@
                             </div>
                             <div class="buttons-right">
                                 <a href="#" class="buttons-a">56.99$</a>
-                                <a href="#" class="buttons-a"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
+                                <a href="#" class="buttons-a hidden-button"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                             <i class="fas fa-plus"></i>
                         </div>
                         <div class="results-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsa maxime delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, voluptas quisquam dicta labore? Consectetur excepturi atque illo asperiores delectus sed, ipsa facere. Quisquam nihil porro harum eligendi repudiandae dolor excepturi, fuga sed maxime animi sunt aliquid.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fu delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, labore?.</p>
                         </div>
                         <div class="results-details flex">
                             <p>By: <a href="#" class="results-details-a">Jorge Clone</a></p>
@@ -207,7 +207,7 @@
                             </div>
                             <div class="buttons-right">
                                 <a href="#" class="buttons-a">56.99$</a>
-                                <a href="#" class="buttons-a"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
+                                <a href="#" class="buttons-a hidden-button"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                             <i class="fas fa-plus"></i>
                         </div>
                         <div class="results-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsa maxime delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, voluptas quisquam dicta labore? Consectetur excepturi atque illo asperiores delectus sed, ipsa facere. Quisquam nihil porro harum eligendi repudiandae dolor excepturi, fuga sed maxime animi sunt aliquid.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fu delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, labore?.</p>
                         </div>
                         <div class="results-details flex">
                             <p>By: <a href="#" class="results-details-a">Jorge Clone</a></p>
@@ -239,7 +239,7 @@
                             </div>
                             <div class="buttons-right">
                                 <a href="#" class="buttons-a">56.99$</a>
-                                <a href="#" class="buttons-a"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
+                                <a href="#" class="buttons-a hidden-button"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
                             </div>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                             <i class="fas fa-plus"></i>
                         </div>
                         <div class="results-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsa maxime delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, voluptas quisquam dicta labore? Consectetur excepturi atque illo asperiores delectus sed, ipsa facere. Quisquam nihil porro harum eligendi repudiandae dolor excepturi, fuga sed maxime animi sunt aliquid.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fu delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, labore?.</p>
                         </div>
                         <div class="results-details flex">
                             <p>By: <a href="#" class="results-details-a">Jorge Clone</a></p>
@@ -271,7 +271,7 @@
                             </div>
                             <div class="buttons-right">
                                 <a href="#" class="buttons-a">56.99$</a>
-                                <a href="#" class="buttons-a"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
+                                <a href="#" class="buttons-a hidden-button"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
                             </div>
                         </div>
                     </div>
@@ -291,7 +291,7 @@
                             <i class="fas fa-plus"></i>
                         </div>
                         <div class="results-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ipsa maxime delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, voluptas quisquam dicta labore? Consectetur excepturi atque illo asperiores delectus sed, ipsa facere. Quisquam nihil porro harum eligendi repudiandae dolor excepturi, fuga sed maxime animi sunt aliquid.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fu delectus nesciunt distinctio saepe, quod minus nostrum rerum aperiam nulla non officiis, labore?.</p>
                         </div>
                         <div class="results-details flex">
                             <p>By: <a href="#" class="results-details-a">Jorge Clone</a></p>
@@ -303,7 +303,7 @@
                             </div>
                             <div class="buttons-right">
                                 <a href="#" class="buttons-a">56.99$</a>
-                                <a href="#" class="buttons-a"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
+                                <a href="#" class="buttons-a hidden-button"><i class="fas fa-cart-arrow-down"></i> Purchase details</a>
                             </div>
                         </div>
                     </div>
@@ -319,61 +319,63 @@
                     <img src="./src/img/logo-footer.png" alt="logo-footer">
                 </div>
                 <div class="logo-footer-description">
-                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro eveniet facere explicabo quae qui perspiciatis alias necessitatibus facilis exercitationem quibusdam, sapiente illo eos assumenda architecto dolores minima voluptate vitae ipsa voluptatibus. Amet ut nemo tempore assumenda similique, nobis a velit ipsum dignissimos beatae rem culpa nostrum non!</h2>
+                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet ut nemo tempore assumenda similique, nobis a velit ipsum dignissimos beatae rem culpa nostrum non!</h2>
                 </div>
             </div>
             <div class="footer-lists flex">
-                <div class="column-list">
-                    <div class="title-list">
-                        <h2>CATEGORIES</h2>
+                <div class="footer-lists1 flex">
+                    <div class="column-list">
+                        <div class="title-list">
+                            <h2>CATEGORIES</h2>
+                        </div>
+                        <div class="one-list">
+                            <ul>
+                                <li><a href="#">Anime Costumes</a></li>
+                                <li><a href="#">Game Costumes</a></li>
+                                <li><a href="#">Movie Costumes</a></li>
+                                <li><a href="#">Wigs</a></li>
+                                <li><a href="#">Anime's Shoes</a></li>
+                                <li><a href="#">Anime's Accessories</a></li>
+                                <li><a href="#">Game's Accessories</a></li>
+                                <li><a href="#">Anime's Posters</a></li>
+                                <li><a href="#">Game's Posters</a></li>
+                                <li><a href="#">Movie's Posters</a></li>
+    
+                            </ul>
+                        </div>
                     </div>
-                    <div class="one-list">
-                        <ul>
-                            <li><a href="#">Anime Costumes</a></li>
-                            <li><a href="#">Game Costumes</a></li>
-                            <li><a href="#">Movie Costumes</a></li>
-                            <li><a href="#">Wigs</a></li>
-                            <li><a href="#">Anime's Shoes</a></li>
-                            <li><a href="#">Anime's Accessories</a></li>
-                            <li><a href="#">Game's Accessories</a></li>
-                            <li><a href="#">Anime's Posters</a></li>
-                            <li><a href="#">Game's Posters</a></li>
-                            <li><a href="#">Movie's Posters</a></li>
-
-                        </ul>
+                    <div class="column-list">
+                        <div class="title-list">
+                            <h2>LOCATIONS</h2>
+                        </div>
+                        <div class="one-list">
+                            <ul>
+                                <li><a href="#">Peru</a></li>
+                                <li><a href="#">Ecuador</a></li>
+                                <li><a href="#">Chile</a></li>
+                                <li><a href="#">United States</a></li>
+                                <li><a href="#">London</a></li>
+                                <li><a href="#">Argelia</a></li>
+                                <li><a href="#">Cuba</a></li>
+                                <li><a href="#">Russia</a></li>
+                                <li><a href="#">Japan</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="column-list">
-                    <div class="title-list">
-                        <h2>LOCATIONS</h2>
-                    </div>
-                    <div class="one-list">
-                        <ul>
-                            <li><a href="#">Peru</a></li>
-                            <li><a href="#">Ecuador</a></li>
-                            <li><a href="#">Chile</a></li>
-                            <li><a href="#">United States</a></li>
-                            <li><a href="#">London</a></li>
-                            <li><a href="#">Argelia</a></li>
-                            <li><a href="#">Cuba</a></li>
-                            <li><a href="#">Russia</a></li>
-                            <li><a href="#">Japan</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="column-list">
-                    <div class="title-list">
-                        <h2>NAVIGATION</h2>
-                    </div>
-                    <div class="one-list">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Sign In</a></li>
-                            <li><a href="#">Sign Up</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Help</a></li>
-                        </ul>
+                    <div class="column-list">
+                        <div class="title-list">
+                            <h2>NAVIGATION</h2>
+                        </div>
+                        <div class="one-list">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Sign In</a></li>
+                                <li><a href="#">Sign Up</a></li>
+                                <li><a href="#">Terms & Conditions</a></li>
+                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Help</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="column-list last-list flex">
@@ -393,6 +395,18 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="footer-lists-tow">
+                <div class="footer-two-title">
+                    <h3>Nyanta-Sama Cosplay Shop</h3>
+                </div>
+                <div class="footer-two-categ">
+                    <ul>
+                        <li><a href="#">CATEGORIES</a></li>
+                        <li><a href="#">LOCATIONS</a></li>
+                        <li><a href="#">NAVIGATION</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
