Making responsive the index header, footer and hero sections completed

--- a/search.html
+++ b/search.html
@@ -43,7 +43,7 @@
                 <input type="text" placeholder="What do you search for?">
                 <input type="text" placeholder="Location">
             </div>
-            <a href="#" class="search-button-hero">Search</a>
+            <a href="./search.html" class="search-button-hero">Search</a>
         </nav>
     </section>
 
