--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <input type="text" placeholder="What do you search for?">
                 <input type="text" placeholder="Location">
             </div>
-            <a href="#" class="search-button-hero">Search</a>
+            <a href="./search.html" class="search-button-hero">Search</a>
         </nav>
     </section>
 
@@ -908,61 +908,63 @@
                     <img src="./src/img/logo-footer.png" alt="logo-footer">
                 </div>
                 <div class="logo-footer-description">
-                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro eveniet facere explicabo quae qui perspiciatis alias necessitatibus facilis exercitationem quibusdam, sapiente illo eos assumenda architecto dolores minima voluptate vitae ipsa voluptatibus. Amet ut nemo tempore assumenda similique, nobis a velit ipsum dignissimos beatae rem culpa nostrum non!</h2>
+                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet ut nemo tempore assumenda similique, nobis a velit ipsum dignissimos beatae rem culpa nostrum non!</h2>
                 </div>
             </div>
             <div class="footer-lists flex">
-                <div class="column-list">
-                    <div class="title-list">
-                        <h2>CATEGORIES</h2>
+                <div class="footer-lists1 flex">
+                    <div class="column-list">
+                        <div class="title-list">
+                            <h2>CATEGORIES</h2>
+                        </div>
+                        <div class="one-list">
+                            <ul>
+                                <li><a href="#">Anime Costumes</a></li>
+                                <li><a href="#">Game Costumes</a></li>
+                                <li><a href="#">Movie Costumes</a></li>
+                                <li><a href="#">Wigs</a></li>
+                                <li><a href="#">Anime's Shoes</a></li>
+                                <li><a href="#">Anime's Accessories</a></li>
+                                <li><a href="#">Game's Accessories</a></li>
+                                <li><a href="#">Anime's Posters</a></li>
+                                <li><a href="#">Game's Posters</a></li>
+                                <li><a href="#">Movie's Posters</a></li>
+    
+                            </ul>
+                        </div>
                     </div>
-                    <div class="one-list">
-                        <ul>
-                            <li><a href="#">Anime Costumes</a></li>
-                            <li><a href="#">Game Costumes</a></li>
-                            <li><a href="#">Movie Costumes</a></li>
-                            <li><a href="#">Wigs</a></li>
-                            <li><a href="#">Anime's Shoes</a></li>
-                            <li><a href="#">Anime's Accessories</a></li>
-                            <li><a href="#">Game's Accessories</a></li>
-                            <li><a href="#">Anime's Posters</a></li>
-                            <li><a href="#">Game's Posters</a></li>
-                            <li><a href="#">Movie's Posters</a></li>
-
-                        </ul>
+                    <div class="column-list">
+                        <div class="title-list">
+                            <h2>LOCATIONS</h2>
+                        </div>
+                        <div class="one-list">
+                            <ul>
+                                <li><a href="#">Peru</a></li>
+                                <li><a href="#">Ecuador</a></li>
+                                <li><a href="#">Chile</a></li>
+                                <li><a href="#">United States</a></li>
+                                <li><a href="#">London</a></li>
+                                <li><a href="#">Argelia</a></li>
+                                <li><a href="#">Cuba</a></li>
+                                <li><a href="#">Russia</a></li>
+                                <li><a href="#">Japan</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="column-list">
-                    <div class="title-list">
-                        <h2>LOCATIONS</h2>
-                    </div>
-                    <div class="one-list">
-                        <ul>
-                            <li><a href="#">Peru</a></li>
-                            <li><a href="#">Ecuador</a></li>
-                            <li><a href="#">Chile</a></li>
-                            <li><a href="#">United States</a></li>
-                            <li><a href="#">London</a></li>
-                            <li><a href="#">Argelia</a></li>
-                            <li><a href="#">Cuba</a></li>
-                            <li><a href="#">Russia</a></li>
-                            <li><a href="#">Japan</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="column-list">
-                    <div class="title-list">
-                        <h2>NAVIGATION</h2>
-                    </div>
-                    <div class="one-list">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Sign In</a></li>
-                            <li><a href="#">Sign Up</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Help</a></li>
-                        </ul>
+                    <div class="column-list">
+                        <div class="title-list">
+                            <h2>NAVIGATION</h2>
+                        </div>
+                        <div class="one-list">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Sign In</a></li>
+                                <li><a href="#">Sign Up</a></li>
+                                <li><a href="#">Terms & Conditions</a></li>
+                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Help</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="column-list last-list flex">
@@ -982,6 +984,18 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="footer-lists-tow">
+                <div class="footer-two-title">
+                    <h3>Nyanta-Sama Cosplay Shop</h3>
+                </div>
+                <div class="footer-two-categ">
+                    <ul>
+                        <li><a href="#">CATEGORIES</a></li>
+                        <li><a href="#">LOCATIONS</a></li>
+                        <li><a href="#">NAVIGATION</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
